--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser-dynamic": "^18.0.0",
         "@angular/router": "^18.0.0",
         "chart.js": "^4.4.3",
+        "openai": "^4.53.2",
         "primeflex": "^3.3.1",
         "primeicons": "^7.0.0",
         "primeng": "^17.18.3",
