--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/platform-browser": "^18.0.0",
         "@angular/platform-browser-dynamic": "^18.0.0",
         "@angular/router": "^18.0.0",
+        "angular-oauth2-oidc": "^17.0.2",
         "chart.js": "^4.4.3",
         "openai": "^4.53.2",
         "primeflex": "^3.3.1",
